Add new requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
 asgiref
-Django==3.2.5
+Django
+asgiref
 pytz
 sqlparse
 psycopg2
+djangorestframework
+django-cors-headers
 markdown
 django-filter
+djangorestframework-simplejwt
 pyyaml
 pillow
 pandas
 openpyxl
-django-allauth
-django-debug-toolbar
+redis
+celery
+django-celery-beat
+django-celery-results
+requests
